tests/ui/regions/regions-in-enums.stderr
error[E0261]: use of undeclared lifetime name `'foo`
  --> $DIR/regions-in-enums.rs:13:9
   |
LL |     X5(&'foo usize)
   |         ^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'foo` here
   |
LL | enum No0<'foo> {
   |         ++++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-in-enums.rs:17:9
   |
LL |     X6(&'a usize)
   |         ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | enum No1<'a> {
   |         ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
